	* Add include/inttypes.h
	* arch/hc/src/mc9s12ne64 - This hcs12 port grew a few more files.  But it
	  is still a long way from complete.
	* arch/*/src/*/*_sigdeliver.c - Fixed a serious error in the signal
	  trampoline logic.  Essentially, interrupts are re-enabled while the
	  signal handler executes, but the logic to re-disable the interrupts
	  before returning from the signal handler trampoline was missing.  Under
	  certain circumstances, this can cause stack corruption.  This was
	  discovered by David Hewson on an ARM9 platform, but since the code
	  has been leveraged, the bug has been propogated from ARM to Cortex-M3,
	  AVR32, M16C, SH1, ZNEO, eZ80, Z8, and Z80 -- almost every architecture.
	  The correction has been incorporated for all architectures but only
	  verified on a few.

5.13 2010-11-09 Gregory Nutt <spudmonkey@racsa.co.cr>

	* lib/lib_strnlen.c -- Added POSIX 2008 strnlen() function.  Contributed
	  by Michael Hrabanek.
	* Fix wild, consistent naming error.  For some reason, I called the at32uc3*
	  parts at91uc* everywhere.  Fixed by changing lots of files and directories.
	* configs/avr32dev1/ostest - The AVR32 port now successfully passes the
	  examples/ostest.  We have a good AVR32 port!
	* configs/avr32dev1/nsh - Added a configuration to support the NuttShell
	  (NSH). As of this writing, here is a problem receiving serial data (this
	  is, very likely, my hardware setup).
	* lib/lib_open.c - Fix an error in fdopen when a valid file desciptor does
	  not refer to an open file.
	* configs/olimex-lpc1766stk - Add support for the Olimex LPC1766-STK
	  development board.  The OS test and NSH configurations (only) have been
	  verified.

5.14 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* configs/olimex-lpc1766stk/nettest - Add examples/nettest configuration to
	  verify the LPC17xx ethernet driver currently under development.
	* arch/arm/src/lpc17xx/lpc17xx_ethernet.c/.h - Began development of
	  the LPC17xx Ethernet driver.

